--- a/engine.cfg
+++ b/engine.cfg
@@ -4,6 +4,10 @@ name="ludum"
 main_scene="game/main_menu.tscn"
 icon="res://icon.png"
 
+[autoload]
+
+global="*res://game/global.gd"
+
 [display]
 
 width=1280
