Some reorganization, plus enabled stretching
Also, a sphinx level

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="ludum"
-main_scene="game/main_menu.tscn"
+main_scene="res://game/main_menu/main_menu.tscn"
 icon="res://icon.png"
 
 [autoload]
@@ -10,6 +10,8 @@ global="*res://game/global.gd"
 
 [display]
 
+stretch_mode="2d"
+stretch_aspect="keep_width"
 width=1280
 height=720
 
