--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="ludum"
-main_scene="res://game/main_menu/main_menu.tscn"
+main_scene="res://game/main.tscn"
 icon="res://icon.png"
 
 [autoload]
