--- a/engine.cfg
+++ b/engine.cfg
@@ -6,6 +6,7 @@ icon="res://icon.png"
 
 [autoload]
 
+sample_player="*res://game/sample_player.tscn"
 scene_switcher="*res://game/scene_switcher.gd"
 global="*res://game/global.gd"
 
