[WIP] Started translating
This brings up a new issue - font diacritics... Some letters are not
displayed at all in slovak translation.

--- a/engine.cfg
+++ b/engine.cfg
@@ -17,6 +17,10 @@ stretch_aspect="keep_width"
 width=1280
 height=720
 
+[locale]
+
+translations=["/translations.en.xl", "/translations.sk.xl", "res://game/translations/translations.en.xl", "res://game/translations/translations.sk.xl"]
+
 [physics_2d]
 
 default_gravity=490
