The whole game should be localizable
The slovak translation went away for now, though.

--- a/engine.cfg
+++ b/engine.cfg
@@ -19,7 +19,7 @@ height=720
 
 [locale]
 
-translations=["/translations.en.xl", "/translations.sk.xl", "res://game/translations/translations.en.xl", "res://game/translations/translations.sk.xl"]
+translations=["res://game/translations/translations.en.xl"]
 
 [physics_2d]
 
