Pause menu should be accessible on Android

--- a/engine.cfg
+++ b/engine.cfg
@@ -17,6 +17,11 @@ stretch_aspect="keep_width"
 width=1280
 height=720
 
+[image_loader]
+
+filter=false
+gen_mipmaps=false
+
 [locale]
 
 translations=["res://game/translations/translations.en.xl"]
